--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "jest": "^26.6.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "redux": "^4.0.5"
   }
 }
